--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ body
 <p class="m">数学：100</p>
 <p class="e">英语：未考</p>
 <p>—————————————————————</p>
-<center class="date">成绩最后更新日期：2020 11 14</center>
+<br>
+<br>
+<h2 class="date">成绩最后更新日期：2020 11 14</h2>
 </body>
 </html>
