--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@ body
 <h3 class="u">第五单元：</h1>
 <p class="c">语文：72</p>
 <p class="m">数学：100</p>
-<p class="e">英语：未考</p>
+<p class="e">英语：（第五第六单元一起考，一张卷）：100</p>
 <p>—————————————————————</p>
 <h3 class="u">第六单元：</h1>
 <p class="c">语文：80</p>
-<p class="m">数学：未考</p>
-<p class="e">英语：未考</p>
+<p class="m">数学：100</p>
+<p class="e">英语：（第五第六单元一起考，一张卷）</p>
 <p>—————————————————————</p>
 <br>
 <br>
-<h2 class="date">成绩最后更新日期：2020 11 23</h2>
+<h2 class="date">成绩最后更新日期：2020 11 29</h2>
 </body>
 </html>
